fix: rem trbls white spaces, footer again

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,19 +1,23 @@
 .footer {
-    background-color: rgb(25, 204, 150);
-    margin-bottom: 0px;
-    margin-top: 0px;
-    &-list {
-        margin: 0;
-        
-        list-style: none;
-        &_item {
-            text-decoration: none;
-            display: block;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 24px;
-            text-align: center;
-            letter-spacing: 5px;
-        
-        }
+  background-color: rgb(25, 204, 150);
+  margin: 0;
+  padding: 1rem;
+  &-list {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    justify-content: space-evenly;
+    padding:0;
+    width: 100%;
+    &_item {
+      display: flex;
+      width:100%;
+      text-decoration: none;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1rem;
+      padding: 1rem;
+      flex-grow: 1;
     }
   }
+}
