--- a/src/app/components/media-section/media-section.component.scss
+++ b/src/app/components/media-section/media-section.component.scss
@@ -2,22 +2,28 @@
 .flex {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(13rem,1fr));
-    grid-template-rows: repeat(auto-fit,minmax(6rem,1fr));
+    grid-template-rows: repeat(auto-fit,minmax(10rem,1fr));
     object-fit: cover;
     grid-gap:1rem;
     grid-auto-flow: dense;
     background-color: #a0e7e5;
     padding:4rem 2rem;
-    margin-bottom: 0;
     vertical-align: center;
+    margin-bottom: 0;
     &-video {
         
+        width:100%;
+        padding:2rem 0.5rem;
+        height:100%;
+        margin-bottom: 0;
+        
         &_ifr {
+            width:100%;
+            height:12rem;
             border:0;
             border-radius: 15px;
-            object-fit:fill;
-            width:100%;
             
+            margin-bottom: 0;
         }
     }
 }
